Popup Structure Created
Added the style, logo and description of each metric in the popup.

Signed-off-by: Francisco Heronildo <heronildo.2010@hotmail.com>
Co-authored-by: Vitor Meireles <vitorrr.meireles@hotmail.com>

--- a/app/pages/popup.html
+++ b/app/pages/popup.html
@@ -2,13 +2,43 @@
 <html>
 <head>
   <meta charset="utf-8" />
-  <title>Popup</title>
+  <title>Popup - Hubcare</title>
   <link rel="stylesheet" type="text/css" href="../styles/popup.css">
 </head>
 <body>
-
-  <h1>Popup</h1>
-
-  <script src="../scripts/popup.js"></script>
+  <div id="topo">
+      <img src="../images/icon-38.png" title="HubCare" alt="HubCare">
+      <h2>HubCare</h2>
+  </div>
+  <div id="container">
+    <div id="box-active" class="box">
+      <h3>Active</h3>
+      <p>First of all, it is necessary 
+        to verify if the repository has 
+        some activity, a live code that 
+        is growing up; or it is inactive, 
+        just like some trunk with old stuff.</p>
+    </div>
+    <div id="box-support" class="box">
+      <h3>Support</h3>
+      <p>When choosing some software to 
+        consume, it is important to expect 
+        some support from the maintainers. 
+        After all, you never know about the 
+        true reliability of small free software, 
+        but is always cool to give a chance.</p>
+    </div>
+    <div id="box-welcoming" class="box">
+      <h3>Welcoming</h3>
+      <p>Imagine spending hours willingly to 
+        improve or fix a problem of a software. 
+        So you test your solution, send a 
+        Pull Request and is it, nobody cares 
+        to your hard work.</p>
+    </div>
+  </div>
+  <div id="footer">
+  <p><center>GoTo a GitHub Repo to see it Working.</center></center></p>
+  </div>
 </body>
 </html>
