Created the Star Us Button for Popup
An iframe was created with the star button for repository.

Signed-off-by: Francisco Heronildo <heronildo.2010@hotmail.com>
Co-authored-by: Vitor Meireles <vitorrr.meireles@hotmail.com>

--- a/app/pages/popup.html
+++ b/app/pages/popup.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" type="text/css" href="../styles/popup.css">
 </head>
 <body>
-  <div id="topo">
+  <div id="top">
       <img src="../images/icon-38.png" title="HubCare" alt="HubCare">
       <h2>HubCare</h2>
   </div>
@@ -35,10 +35,14 @@
         So you test your solution, send a 
         Pull Request and is it, nobody cares 
         to your hard work.</p>
-    </div>
+    </div>  
   </div>
   <div id="footer">
-  <p><center>GoTo a GitHub Repo to see it Working.</center></center></p>
+    <center>
+      <iframe src="https://ghbtns.com/github-btn.html?user=fga-eps-mds&repo=2019.1-hubcare-plugin&type=star&count=true" frameborder="0" scrolling="0" width="80px" height="20px"></iframe>
+      <p>Go To a GitHub Repo to see it Working.</p>
+    </center>
   </div>
+  <script src="../scripts/popup.js"></script>
 </body>
 </html>
