Created the enable and disable button
An enable and disable button was created in the upper-right corner of the popup.

Signed-off-by: Francisco Heronildo <heronildo.2010@hotmail.com>

--- a/app/pages/popup.html
+++ b/app/pages/popup.html
@@ -2,13 +2,20 @@
 <html>
 <head>
   <meta charset="utf-8" />
-  <title>Popup - Hubcare</title>
+  <title>Popup</title>
   <link rel="stylesheet" type="text/css" href="../styles/popup.css">
 </head>
 <body>
   <div id="top">
-      <img src="../images/icon-38.png" title="HubCare" alt="HubCare">
-      <h2>HubCare</h2>
+    <div id="logo">
+        <img src="../images/icon-38.png" title="HubCare" alt="HubCare">
+    </div>
+    <div id="toggle-button">
+      <label class="switch">
+        <input type="checkbox">
+        <span class="slider round"></span>
+      </label>
+    </div>
   </div>
   <div id="container">
     <div id="box-active" class="box">
@@ -40,7 +47,7 @@
   <div id="footer">
     <center>
       <iframe src="https://ghbtns.com/github-btn.html?user=fga-eps-mds&repo=2019.1-hubcare-plugin&type=star&count=true" frameborder="0" scrolling="0" width="80px" height="20px"></iframe>
-      <p>Go To a GitHub Repo to see it Working.</p>
+      <p>Go to a GitHub repo to see it working.</p>
     </center>
   </div>
   <script src="../scripts/popup.js"></script>
