Created functions to have the communication using chrome storage api.
Signed-off-by: Vitor Meireles Oliveira <vitorrr.meireles@hotmail.com>
Co-authored-by: Francisco <heronildo.2010@hotmail.com>

--- a/app/pages/popup.html
+++ b/app/pages/popup.html
@@ -12,7 +12,7 @@
     </div>
     <div id="toggle-button">
       <label class="switch">
-        <input type="checkbox" id="click-this">
+        <input type="checkbox" id="click-this" value="shit">
         <span class="slider round"></span>
       </label>
     </div>
