Stylized login button

--- a/app/pages/popup.html
+++ b/app/pages/popup.html
@@ -44,9 +44,16 @@
         to your hard work.</p>
     </div>  
   </div>
-  <a id="login">login</a>
   <div id="footer">
     <center>
+      <br/>
+      <button id="login">
+        <b>
+          login
+        </b>
+      </button>
+      <br/>
+      <br/>
       <iframe src="https://ghbtns.com/github-btn.html?user=fga-eps-mds&repo=2019.1-hubcare-plugin&type=star&count=true" frameborder="0" scrolling="0" width="80px" height="20px"></iframe>
       <p>Go to a GitHub repo to see it working.</p>
     </center>
