Stylized logout button

--- a/app/pages/popup.html
+++ b/app/pages/popup.html
@@ -48,14 +48,15 @@
     <center>
       <br/>
       <button id="login">
-        <b>
-          login
-        </b>
+        <b>login</b>
       </button>
       <br/>
       <br/>
       <iframe src="https://ghbtns.com/github-btn.html?user=fga-eps-mds&repo=2019.1-hubcare-plugin&type=star&count=true" frameborder="0" scrolling="0" width="80px" height="20px"></iframe>
       <p>Go to a GitHub repo to see it working.</p>
+      <button id="logout">
+        <b>logout</b>
+      </button>
     </center>
   </div>
   <script src="../scripts/popup.js"></script>
